# chip-8

./: CMakeLists.txt  README.MD  conanfile.py  renovate.json
.github/workflows/: cmake.yaml  cmake.yml  conan.yaml
chip-8-disassembler/: CMakeLists.txt  disas.cpp
chip-8-sdl/: CMakeLists.txt  app.cpp  app.h  argparser.cpp  argparser.h  config.h  configuration.yaml.in  example_conf.yaml  main.cpp  sdl_helper.cpp  sdl_helper.h
chip-8-sdl/icons/: folder.h  mute.h  play.h  settings.h  speaker.h  warning.h
chip-8-sdl/res/: font.txt
chip-8-sdl/res/fonts/: OFL.txt
chip-8-sdl/widget/: button.cpp  button.h  chip8_screen.cpp  chip8_screen.h  label.cpp  label.h  layout.h  panel.cpp  panel.h  widget.cpp  widget.h
cmake/: compiler_flags.cmake  copy_dll.cmake  dependencies.cmake
lib/: CMakeLists.txt
lib/include/: chip8.h  cpu_quirks.h  opcode.h
lib/src/: CMakeLists.txt  chip8.cpp  opcode.cpp
lib/test/: CMakeLists.txt  addi.cpp  chip8_test.cpp  chip8_test.h  clear.cpp  jmp.cpp  movi.cpp  ret.cpp
